Fix horizontal spacing on search input

--- a/style.module.css
+++ b/style.module.css
@@ -74,6 +74,7 @@
 }
 
 .sidebar .search {
+  width: 100%;
   font-size: 1rem;
   padding: 0.75rem 2.5rem 0.75rem 1rem;
   border: 1px solid #373942;
